--- a/src/components/Formulario/style.css
+++ b/src/components/Formulario/style.css
@@ -55,6 +55,7 @@
     border: 2px solid #45424e;
     background: #1d1b24a1;
     padding: 15px;
+    margin-top: 5px;
     height: 50px;
     font-size: 17px;
     min-width: 50px;
