--- a/src/components/Cabecalho/style.css
+++ b/src/components/Cabecalho/style.css
@@ -23,8 +23,14 @@
     font-weight: bold;   
     flex: 2; 
     margin-left: 15px;
+    text-shadow:  4px 4px #555;
 }
 
+.cabecalho .notificacoes {
+    flex: 6;
+    /* border: 1px solid red; */
+}
 .cabecalho .config-usuario {
     justify-content: flex-end;
+    flex: 3;
 }
