--- a/src/pages/Produtos/style.css
+++ b/src/pages/Produtos/style.css
@@ -3,29 +3,17 @@
 }
 
 .home-produtos-corpo { 
-    padding: 20px;
+    padding: 10px 20px;
     flex-wrap: wrap;
     /* justify-content: center; */
-    flex-direction: row;
+    /* flex-direction: row; */
 }
-
-.home-produtos-corpo .lista-produtos {
-    color: #FFF;
-    flex: 5;
-    padding: 20px;
-    flex-direction: column;
-    align-content: flex-start;
-}
-.home-produtos-corpo .lista-produtos h2 {
-    width: 100%;
-}
-
 
 @media (max-width: 998px) {
     .home-produtos-corpo {
         flex-direction: column;
     }
-    .home-produtos-corpo .lista-produtos {
-        flex: 1;
+    .home-produtos {
+        flex-direction: column;
     }
 }
