--- a/src/components/Cabecalho/style.css
+++ b/src/components/Cabecalho/style.css
@@ -18,12 +18,12 @@
 }
 
 .cabecalho .logo span {
-    font-size: 30px;
-    font-style: italic;
+    font-size: 26px;
+    /* font-style: italic; */
     font-weight: bold;   
     flex: 2; 
     margin-left: 15px;
-    text-shadow:  4px 4px #555;
+    text-shadow:  2px 2px #333;
 }
 
 .cabecalho .notificacoes {
