--- a/src/components/Formulario/style.css
+++ b/src/components/Formulario/style.css
@@ -4,7 +4,7 @@
     padding: 20px;
     align-content: flex-start;  
     align-items: flex-start;  
-    border-right: 1px solid #323038;
+    border-right: 2px solid #323038;
 }
 .form-cadastro h2{
     color: #FFF;   
@@ -21,14 +21,13 @@
 }
 
 @media (max-width: 998px) {
-    .form-cadastro form div {
-        flex-direction: column;
-    }
-
     .form-cadastro {
         border-right: none;
-        border-bottom: 1px solid #323038;
+        border-bottom: 2px solid #323038;
         flex: 1;
+    }
+    .form-cadastro form div {
+        flex-direction: column;
     }
 }
 
@@ -39,7 +38,7 @@
     justify-content: flex-start;
     align-content: flex-start;
     /* border: 1px solid red; */
-    margin: 10px 2px;
+    margin: 5px 1px;
 
 }
 
@@ -69,30 +68,25 @@
     border: none;
     padding: 10px 20px;
     color: #FFF;
-    font-size: 22px;
+    font-size: 16px;
+    font-weight: bold;
     border-radius: 2px;
 }
 
 .btn-confirma {
-    background: #aea8ff;
-}
-
-.btn-confirma:hover {
-    background: #827be0;
-    cursor: pointer;
-}
-.btn-confirma:active {
     background: #5a53be;
 }
 
+.btn-confirma:hover {
+    background: #6861cc;
+    cursor: pointer;
+}
+
 .btn-limpar {
-    background: #fa9588;
+    background: #c04a42;
 }
 
 .btn-limpar:hover {
-    background: #db776a;
+    background: #be584b;
     cursor: pointer;
-}
-.btn-limpar:active {
-    background: #c04a42;
 }
