--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -1,3 +1,56 @@
 .corpo {
     color: #FFF;
+    overflow-y: scroll;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex: 1;
+}
+
+.formulario-login {
+    width: 400px;
+    height: 400px;
+    flex-direction: column;
+    align-items: center;
+    /* border: 1px solid red; */
+}
+
+.formulario-login .logo {
+    /* border: 1px solid red; */
+    flex: 1;
+    /* flex-direction: column; */
+    font-size: 28px;
+    font-weight: bold;
+    line-height: 60px;
+    color: #aea8ff;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 70px;
+}
+.formulario-login .logo span {
+    /* width: 70%; */
+}
+
+.formulario-login form {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.btn-login {
+    margin: 20px 2px;
+    border: none;
+    padding: 10px 20px;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 4px;
+    width: 100%;
+}
+
+.formulario-login form input {
+    margin: 5px 0px;
 }
